data/badges/CMakeLists.txt: Include symlinked badges when installing.

--- a/data/badges/CMakeLists.txt
+++ b/data/badges/CMakeLists.txt
@@ -1,6 +1,6 @@
 # badge files
 
-file(GLOB BADGE_FILES *.svg *.png)
+file(GLOB_RECURSE BADGE_FILES FOLLOW_SYMLINKS *.svg *.png)
 
 install(FILES ${BADGE_FILES}
         DESTINATION "${CMAKE_INSTALL_FULL_DATADIR}/ayatana-greeter/badges")
